--- a/src/app/questionnarie/questionnarie.component.html
+++ b/src/app/questionnarie/questionnarie.component.html
@@ -12,7 +12,7 @@
         </mat-radio-group>
     </p>
     </div>
-    <div class="summary" id="summary" *ngIf="selectedAge !== '' ">
+    <div class="summary" id="summary">
         <app-summary [selectedAge]="selectedAge"></app-summary>
     </div>
 </form> 
